[package]
name = "loro"
version = "1.5.8"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "loro"

[dependencies]
loro-ffi = { git = "https://github.com/sensslen/loro-ffi.git", rev = "fdb33599e251303e6c9d22ba157113e5ea5b741d" }
uniffi = "0.29.0"

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[bindings.csharp]
namespace = "LoroCs"
access_modifier = "public"
